# projeto_final_freertos

./: README.md
inc/: aht10.h  config_geral.h  lwipopts.h  mqtt_lwip.h  sensors_init.h  task_alertas_mqtt.h  task_display_hello.h  task_distancia_vl53l0x.h  task_emergencia.h  task_giroscopio_mpu6500.h  task_mqtt.h  task_oximetro_max30102.h  task_telegram.h  task_temperatura_aht10.h  task_wifi.h  utils_print.h  vl53l0x.h
src/: CMakeLists.txt  config_geral.c  main.c  mqtt_lwip.c  utils_print.c
src/drivers/: aht10.c  vl53l0x.c
src/tasks/: task_alertas_mqtt.c  task_display_hello.c  task_distancia_vl53l0x.c  task_emergencia.c  task_giroscopio_mpu6500.c  task_mqtt.c  task_oximetro_max30102.c  task_telegram.c  task_temperatura_aht10.c  task_wifi.c
